# ari-dex

./: Dockerfile  Dockerfile.api  README.md  developers.html  fly.api.toml  index.html  investors.html  liquidity.html  og.html  traders.html
.github/workflows/: ci.yml
contracts/script/: DeployAll.s.sol
crates/ari-engine/src/: hybrid.rs
crates/ari-engine/src/batch/: pricing.rs
crates/ari-engine/src/clmm/: math.rs
crates/ari-engine/src/orderbook/: book.rs
crates/ari-gateway/: Cargo.toml
crates/ari-gateway/src/: app.rs  db.rs  executor.rs  lib.rs  solver_worker.rs  validation.rs
crates/ari-gateway/src/middleware/: mod.rs
crates/ari-gateway/src/routes/: health.rs  intents.rs  liquidity.rs  mod.rs  pools.rs  portfolio.rs  positions.rs  quote.rs  settlement.rs  solvers.rs  tokens.rs
crates/ari-gateway/src/ws/: mod.rs
crates/ari-solver/src/: auction.rs  router.rs  scoring.rs
en/: developers.html  index.html  investors.html  liquidity.html  traders.html
frontend/src/: App.tsx  config.ts  index.css
frontend/src/abi/: erc20.ts  settlement.ts  uniswapRouter.ts
frontend/src/components/: BlogPage.tsx  DocsPage.tsx  Header.tsx  LiquidityPage.tsx  PoolsPage.tsx  PortfolioPage.tsx  SolversPage.tsx  SwapPanel.tsx
frontend/src/hooks/: useSettle.ts  useSignIntent.ts  useSwap.ts  useTokenApproval.ts  useTokenBalance.ts
ja/: developers.html  index.html  investors.html  liquidity.html  traders.html
tasks/: todo.md
