[package]
name = "ari-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/WebSocket gateway for the ARI DEX"

[dependencies]
ari-core = { path = "../ari-core" }
ari-engine = { path = "../ari-engine" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rand.workspace = true
futures = "0.3"
tower = { version = "0.4", features = ["limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
k256 = { version = "0.13", features = ["ecdsa-core", "sha256"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
